<resources>
    <string name="app_name">Keep Practicing</string>
    <string name="keep_practicing">Keep Practicing!</string>
    <string name="start">Start</string>
    <string name="sample_progress_value">Question 1 of 10</string>
    <string name="sample_timer_value">Timer 00:00</string>
    <string name="finish">Finsh</string>
    <string name="sample_question">What is the sum of 98373 + 28464?</string>
    <string name="answer">Answer</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="timer_with_1_replacable">Timer: $0</string>
    <string name="contents">Contents</string>
    <string name="explore_contents">Explore Contents</string>
    <string name="quiz_status">Question $0 of $1 | Correct $2 | Incorrect $3 | Not Attempted $4</string>
    <string name="quiz_timer_status">Timer: $0</string>
    <string name="topic">Topic</string>
    <string name="report_title"><![CDATA[<h3>YOUR QUIZ REPORT</h3>]]></string>
    <string name="quiz_completed_with_3_replacables"><![CDATA[<p>Quiz Completed!<br>Correct $0<br>Incorrect $1<br>Not Attempted $2</p>]]></string>
</resources>
