<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activityQuiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryContrast"
        tools:context=".userinterfaces.QuizActivity"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_layout_height"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="match_parent"
                      android:background="@color/colorPrimary"
                      android:orientation="horizontal">

            <TextView
                    android:id="@+id/textViewProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:padding="@dimen/padding_small"
                    android:textColor="@color/colorPrimaryContrast"
                    android:gravity="end"
                    android:textAlignment="center"
                    android:text="@string/sample_progress_value"
                    android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:gravity="end">

            <TextView
                    android:id="@+id/textViewTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:padding="@dimen/padding_small"
                    android:textColor="@color/colorPrimaryContrast"
                    android:text="@string/sample_timer_value"
                    android:layout_gravity="center_vertical"/>

            <Button
                    android:id="@+id/buttonFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:padding="@dimen/padding_small"
                    android:text="@string/finish"
                    android:layout_gravity="center_vertical"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorPrimaryContrast"
                    android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/layoutQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_small"
            android:orientation="vertical">

        <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/colorPrimary"
                android:text="@string/sample_question"/>

        <EditText
                android:id="@+id/editTextAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/answer"/>

        <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:textSize="@dimen/text_size_medium"
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:textAllCaps="false"
                android:background="@drawable/button_rounded_corner"
                android:textColor="@color/colorPrimaryContrast"
                android:text="@string/submit"/>

    </LinearLayout>

</LinearLayout>